--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neuro-link-sentinel",
+  "name": "pulseguard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,14 @@
     "start": "vite"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "express": "^4.18.2",
-    "ws": "^8.13.0",
-    "cors": "^2.8.5",
-    "@google/genai": "^1.33.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
